[package]
name = "apk_rs"
version = "0.1.1"
edition = "2024"
authors = ["Zhenjia Zeng"]
description = "A simple new implementation of apk"
keywords = ["alpine", "apk"]
license = "Apache-2.0"
repository = "https://github.com/zzjrabbit/apk-rs"
homepage = "https://github.com/zzjrabbit/apk-rs"

[dependencies]
anyhow = "1.0.100"
fatfs = "0.3.6"
flate2 = "1.1.2"
gpt = "4.1.0"
path-slash = "0.2.1"
rayon = "1.11.0"
serde = { version = "1.0.228", features = ["derive"] }
tar = "0.4.44"
tempfile = "3.23.0"
toml = "0.9.7"
ureq = "3.1.2"
walkdir = "2.5.0"

[workspace]
